--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
       "src": "nuxt.config.js",
       "use": "@nuxtjs/vercel-builder",
       "config": {
-        "serverFiles": ["/server/api/*"]
+        "serverFiles": ["/server/api/**"]
       }
     }
   ]
