--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "webpack": "^4.46.0"
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.5.0"
+    "@faker-js/faker": "^7.5.0",
+    "dotenv": "^16.0.3"
   }
 }
