--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,50 @@
 {
   "version": 2,
-  "builds": [
+  "cleanUrls":true,
+  "functions":{
+    "api/products.js":{
+        "memory":3008,
+        "maxDuration":30
+    }
+  },
+  "devCommand":"npm run dev",
+  "headers": [
     {
-      "src": "nuxt.config.js",
-      "use": "@nuxtjs/vercel-builder",
-      "config": {
-        "serverFiles": ["server/api/**"]
-      }
+      "source": "/(.*)",
+      "headers" : [
+        {
+          "key" : "X-Content-Type-Options",
+          "value" : "nosniff"
+        },
+        {
+          "key" : "X-Frame-Options",
+          "value" : "DENY"
+        },
+        {
+          "key" : "X-XSS-Protection",
+          "value" : "1; mode=block"
+        }
+      ]
     },
     {
-      "src": "api/**/*.js",
-      "use": "@vercel/node"
+      "source": "/:path*",
+      "has": [
+        {
+          "type": "query",
+          "key": "authorized"
+        }
+      ],
+      "headers": [
+        {
+          "key": "x-authorized",
+          "value": "true"
+        }
+      ]
     }
   ],
-  "routes": [
-    {
-      "src": "/api/products/*",
-      "dest": "server/api/products.js",
-      "methods": ["GET"],
-      "headers": {
-        "Access-Control-Allow-Methods": "GET",
-        "Access-Control-Allow-Headers": "Content-Type"
-      }
-    }
-  ]
+  "installCommand":"npm install",
+  "outputDirectory":"dist/",
+  "trailingSlash":false
+
 }
+
