--- a/vercel.json
+++ b/vercel.json
@@ -1,50 +1,15 @@
 {
   "version": 2,
-  "cleanUrls":true,
+  "buildCommand":"nuxt build",
   "functions":{
     "api/products.js":{
-        "memory":1024,
+        "memory":512,
         "maxDuration":9
     }
   },
-  "devCommand":"npm run dev",
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers" : [
-        {
-          "key" : "X-Content-Type-Options",
-          "value" : "nosniff"
-        },
-        {
-          "key" : "X-Frame-Options",
-          "value" : "DENY"
-        },
-        {
-          "key" : "X-XSS-Protection",
-          "value" : "1; mode=block"
-        }
-      ]
-    },
-    {
-      "source": "/:path*",
-      "has": [
-        {
-          "type": "query",
-          "key": "authorized"
-        }
-      ],
-      "headers": [
-        {
-          "key": "x-authorized",
-          "value": "true"
-        }
-      ]
-    }
-  ],
   "installCommand":"npm install",
   "trailingSlash":false,
-  "outputDirectory":".nuxt/"
+  "outputDirectory":".nuxt"
 
 }
 
