--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,56 @@
 {
+  "version": 2,
   "buildCommand":"nuxt build",
   "functions":{
     "api/*.js":{
         "memory":512,
         "maxDuration":9
-    },
-    "pages/**/*.js":{
-      "memory":512,
-      "maxDuration":9
-  }
+    }
   },
+  "trailingSlash":"false",
   "installCommand":"npm install",
-  "outputDirectory":"nuxt-dist"
+  "headers":[
+    {
+      "source": "/service-worker.js",
+      "headers" : [
+        {
+          "key" : "Cache-Control",
+          "value" : "public, max-age=0, must-revalidate"
+        }
+      ]
+    },
+    {
+      "source": "/(.*)",
+      "headers" : [
+        {
+          "key" : "X-Content-Type-Options",
+          "value" : "nosniff"
+        },
+        {
+          "key" : "X-Frame-Options",
+          "value" : "DENY"
+        },
+        {
+          "key" : "X-XSS-Protection",
+          "value" : "1; mode=block"
+        }
+      ]
+    },
+    {
+      "source": "/:path*",
+      "has": [
+        {
+          "type": "query",
+          "key": "authorized"
+        }
+      ],
+      "headers": [
+        {
+          "key": "x-authorized",
+          "value": "true"
+        }
+      ]
+    }
+  ]
 }
 
