--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
         "maxDuration":9
     }
   },
-  "trailingSlash":"false",
+  "trailingSlash":false,
   "installCommand":"npm install",
   "headers":[
     {
