--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,19 @@
 {
   "version": 2,
   "buildCommand":"nuxt build",
+  "builds": [
+    {
+      "src": "nuxt.config.js",
+      "use": "@nuxtjs/vercel-builder",
+      "config": {
+        "serverFiles": ["api/**"]
+      }
+    },
+    {
+      "src": "api/**/*.js",
+      "use": "@vercel/node"
+    }
+  ],
   "functions":{
     "api/*.js":{
         "memory":512,
