--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,10 @@
     {
       "src": "api/**/*.js",
       "use": "@vercel/node"
+    },
+      {
+      "src": "api/**/*.js",
+      "use": "@vercel/node"
     }
   ],
   "trailingSlash":false,
