--- a/vercel.json
+++ b/vercel.json
@@ -6,14 +6,10 @@
       "src": "nuxt.config.js",
       "use": "@nuxtjs/vercel-builder",
       "config": {
-        "serverFiles": ["api/**"]
+        "serverFiles": ["api/**/*"]
       }
     },
     {
-      "src": "api/**/*.js",
-      "use": "@vercel/node"
-    },
-      {
       "src": "api/**/*.js",
       "use": "@vercel/node"
     }
@@ -21,15 +17,6 @@
   "trailingSlash":false,
   "installCommand":"npm install",
   "headers":[
-    {
-      "source": "/service-worker.js",
-      "headers" : [
-        {
-          "key" : "Cache-Control",
-          "value" : "public, max-age=0, must-revalidate"
-        }
-      ]
-    },
     {
       "source": "/(.*)",
       "headers" : [
